[package]
name = "primcast-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

fnv = "1.0"
smallvec = { version = "1.8", features = ["serde"] }
parse-config = { version = "0.12", package = "config" }
rand = "0.8"

bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }

