[package]
name = "primcast-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.8"

rustc-hash = "1.1.0"
# fnv = "1.0"
priority-queue = "1.2"
smallvec = { version = "1.8", features = ["serde"] }
parse-config = { version = "0.12", package = "config" }
serde = { version = "1", features = ["derive", "rc"] }
bytes = { version = "1.1", features = ["serde"] }
chrono = "0.4"
