[package]
name = "primcast-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primcast-core = { path = "../primcast-core"}

thiserror = "1.0"
rand = "0.8"
clap = { version = "3.2", features = ["derive"] }
rustc-hash = "1.1.0"
itertools = "0.10"
hdrhistogram = "7.5"
# console-subscriber = "*" # for tokio-console

bincode = "1.3"
bytes = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }

futures = "0.3"
# async-trait = "0.1" # no async traits yet: this works around it
pin-project-lite = "0.2"

tokio = { version = "1.19", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["codec"] }
# tokio_stream = version = "0.1"

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
